resources/04_deploy_applications/application-02/base/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: application-02
    app.kubernetes.io/instance: application-02
  name: application-02
  namespace: application-02
spec:
  ports:
  - name: 8001-tcp
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app.kubernetes.io/component: application-02
    app.kubernetes.io/instance: application-02
status:
  loadBalancer: {}
