resources/04_deploy_applications/application-02/base/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: application-02
  namespace: application-02
spec:
  port:
    targetPort: 8001-tcp
  to:
    kind: Service
    name: application-02
    weight: 100
  wildcardPolicy: None
